--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,14 @@ click==8.1.8
 cmake==4.0.3
 Flask==3.1.1
 gTTS==2.5.4
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 numpy==2.3.1
 opencv-python==4.11.0.86
+packaging==25.0
 requests==2.32.4
 urllib3==2.5.0
 Werkzeug==3.1.3
